--- a/swelter/View/Base.lproj/Main.storyboard
+++ b/swelter/View/Base.lproj/Main.storyboard
@@ -62,22 +62,30 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="UZK-ZK-BIz">
                                         <rect key="frame" x="329" y="0.0" width="45" height="94"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bFD-yB-PEx">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eIp-Nz-DkA">
                                                 <rect key="frame" x="0.0" y="0.5" width="45" height="44"/>
-                                                <color key="tintColor" name="Default Light"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="45" id="1NB-MZ-yrY"/>
-                                                    <constraint firstAttribute="width" constant="45" id="TGO-jL-aMV"/>
+                                                    <constraint firstAttribute="width" constant="45" id="HUi-dh-DUz"/>
+                                                    <constraint firstAttribute="height" constant="45" id="VEo-yD-bRV"/>
                                                 </constraints>
-                                            </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Dii-Hh-4c4">
+                                                <color key="tintColor" name="Default Light"/>
+                                                <state key="normal" backgroundImage="magnifyingglass.circle" catalog="system"/>
+                                                <connections>
+                                                    <action selector="searchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Itg-wj-mON"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DlU-xb-odQ">
                                                 <rect key="frame" x="0.0" y="49.5" width="45" height="44"/>
-                                                <color key="tintColor" name="Default Light"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="45" id="Hyj-QT-f8S"/>
-                                                    <constraint firstAttribute="width" constant="45" id="Yc5-GD-Yqu"/>
+                                                    <constraint firstAttribute="width" constant="45" id="K1E-Uj-29r"/>
+                                                    <constraint firstAttribute="height" constant="45" id="KBR-fL-koi"/>
                                                 </constraints>
-                                            </imageView>
+                                                <color key="tintColor" name="Default Light"/>
+                                                <state key="normal" backgroundImage="location.circle" catalog="system"/>
+                                                <connections>
+                                                    <action selector="locationPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pVf-zw-Bq1"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -193,6 +201,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="cityLabel" destination="1O9-4z-2vu" id="4Mj-j9-GT9"/>
+                        <outlet property="conditionImageView" destination="2IC-dV-jqn" id="dyQ-1h-WqQ"/>
+                        <outlet property="conditionLabel" destination="SVt-Xt-QTi" id="1Cb-gI-JLE"/>
+                        <outlet property="searchTextField" destination="vFa-mH-6RQ" id="puo-gl-iy7"/>
+                        <outlet property="sunRiseLabel" destination="xmQ-S1-hjs" id="mBQ-du-zUc"/>
+                        <outlet property="sunSetLabel" destination="Edv-k6-Q2f" id="UEo-0y-GFS"/>
+                        <outlet property="temperatureLabel" destination="fle-I6-9xA" id="XVM-33-UUL"/>
+                        <outlet property="windSpeedLabel" destination="bVA-It-YOJ" id="vjB-5W-JsJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -208,10 +226,10 @@
         <image name="sunset" catalog="system" width="64" height="48"/>
         <image name="wind" catalog="system" width="64" height="50"/>
         <namedColor name="Default Light">
-            <color red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.93300002813339233" green="0.93300002813339233" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="SF Symbol">
-            <color red="0.1333333333" green="0.15686274510000001" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.13300000131130219" green="0.15700000524520874" blue="0.19200000166893005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
